WanaLyzer/out/numpy/typing/tests/data/pass/einsumfunc.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

AR_LIKE_b: Incomplete
AR_LIKE_u: Incomplete
AR_LIKE_i: Incomplete
AR_LIKE_f: Incomplete
AR_LIKE_c: Incomplete
AR_LIKE_U: Incomplete
OUT_f: np.ndarray[Any, np.dtype[np.float64]]
OUT_c: np.ndarray[Any, np.dtype[np.complex128]]
